--- a/attkopa.html
+++ b/attkopa.html
@@ -6,14 +6,19 @@
 <body>  
   <header class="top" role="header">
     <div class="container">
+      <div class="row">
            <h1>Saker att k&ouml;pa: ({{incompleteCount}})</h1>
+      </div>
+      <div class="row">
 <label class="hide-completed">
-  <input type="checkbox" checked="{{hideCompleted}}" />
-  G&ouml;m det som &auml;r köpt
-</label>
-       <form class="new-task form-horizontal" role="form">
-    <input type="text" class="form-control" id ="text" name="text" placeholder="Skriv det som ska k&ouml;pas h&auml;r!" />
-  </form>
+  <input type="checkbox" checked="{{hideCompleted}}" /> <span class="text">G&ouml;m det som &auml;r köpt</span>
+        </label>
+      </div>
+      <div class="row">
+         <form class="new-task form-horizontal" role="form">
+          <input type="text" class="form-control input-large" id ="text" name="text" placeholder="Skriv det som ska k&ouml;pas h&auml;r!" />
+        </form>
+      </div>
     </div>
 </header>
 <div class="container">
@@ -29,7 +34,7 @@
   <li class="{{#if checked}}checked{{/if}}">
     <button class="delete">&times;</button>
 
-    <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
+    <input type="checkbox" checked="{{checked}}" />
 
     <span class="text">{{text}}</span>
   </li>
